K8/9-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp
          image: sansv/tomcat-app-image:v1
          ports:
            - name: vproapp-port
              containerPort: 8080
