K8/8-rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vproarmq
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: vproarmq-port
      protocol: TCP
